--- a/src/app/Component/colombiana/colombiana.component.html
+++ b/src/app/Component/colombiana/colombiana.component.html
@@ -104,8 +104,8 @@
           <br>
           <h1 class="text-center letra">Comida Colombiana</h1>
           <br>
-          <div class="offset-lg-1 m-0 row justify-content-center">
-            <app-card-receta [recetas]='receta' *ngFor='let receta of recetas'></app-card-receta>
+          <div class="offset-lg-1 m-0 row justify-content-center grid">
+            <app-card-receta [recetas]='receta' class="gride" *ngFor='let receta of recetas'></app-card-receta>
           </div>
         </div>
     </div>
