--- a/src/app/Component/mexicana/mexicana.component.html
+++ b/src/app/Component/mexicana/mexicana.component.html
@@ -104,8 +104,8 @@
         <br>
         <h1 class="text-center letra">Comida Mexicana</h1>
         <br>
-        <div class="justify-content-center">
-          <app-card-receta [recetas]='receta' *ngFor='let receta of recetas'></app-card-receta>
+        <div class="justify-content-center grid"  >
+          <app-card-receta   [recetas]='receta' class="gride" *ngFor='let receta of recetas'></app-card-receta>
         </div>
       </div>
   </div>
