--- a/src/app/Component/card-receta/card-receta.component.html
+++ b/src/app/Component/card-receta/card-receta.component.html
@@ -6,7 +6,7 @@
             <h5 class="card-title">{{recetas.nombre}}</h5>
         </div>
             <div class="mybtn"> 
-            <a routerLink="/recetas/{{recetas.pais}}" class="btn btn-success">Ver receta</a>
+            <a routerLink="/receta/{{recetas.pais}}" class="btn btn-success" (click)="verReceta()">Ver receta</a>
         </div>  
     </div>
 </div><br>
