--- a/src/app/Component/inter-receta-japonesa/inter-receta-japonesa.component.css
+++ b/src/app/Component/inter-receta-japonesa/inter-receta-japonesa.component.css
@@ -1,5 +1,5 @@
 .background {
-    background-image: url("../../../assets/imagenes/fondomexicana.jpg");
+    background-image: url("../../../assets/imagenes/fondojaponesa.jpeg");
     background-size: cover;
 	width: 100%;
 	left: 0;
