--- a/src/app/Component/inter-receta-espanola/inter-receta-espanola.component.html
+++ b/src/app/Component/inter-receta-espanola/inter-receta-espanola.component.html
@@ -1,1 +1,132 @@
-<p>inter-receta-espanola works!</p>
+
+    <!-- Navbar -->
+    <nav  class="navbar navbar-expand-lg color">
+        <div class="container-fluid">
+        <ul class="nav">
+            <li class="nav-item">
+            <i class="bi bi-list" type="button" id="sidebarCollapse" style="font-size: 2.5rem; color: #F3F400;" ></i>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link"><img src="../../../assets/imagenes/liso.png" alt=""  width="165px" routerLink="/inicio" style="margin-top: 5px;"></a>
+            </li>
+        </ul>
+        <div class="text-end">
+            <img src="../../../assets/imagenes/bandera-española.png" alt=""  width="75px" >
+        </div>
+        </div>
+    </nav>
+    
+    
+    <div class="wrapper">
+    
+        <nav id="sidebar">
+        <ul class="lisst-unstyled components">
+    
+            <!-- Inicio -->
+            <li>
+            <a class="text-white">
+                <span><i class="bi bi-house-door-fill" style="color: #fff;"></i></span><b>&nbsp; Inicio</b></a>
+            </li>
+    
+            <!-- Categorias -->
+            <li>
+            <a href="#categorias" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle text-white" style="text-decoration: none;">
+                <span><i class="bi bi-list" style="font-size: 1.5rem; color: #fff;" ></i></span><b>&nbsp; Categorias</b></a>
+            <ul class="collapse list-unstyled" id="categorias">
+                <li>
+                <a routerLink="/recetas/mexicanas">Mexicana</a>
+                </li>
+                <li>
+                <a routerLink="/recetas/colombianas">Colombiana</a>
+                </li>
+                <li>
+                <a routerLink="/recetas/españolas">Española</a>
+                </li>
+                <li>
+                <a routerLink="/recetas/italianas">Italiana</a>
+                </li>
+                <li>
+                <a routerLink="/recetas/japonesas">Japonesa</a>
+                </li>
+                <li>
+                <a routerLink="/recetas/chinas">China</a>
+                </li>
+            </ul>
+            </li>
+    
+            <!-- Perfil -->
+            <li>
+                    <a href="#perfil" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle text-white"style="text-decoration: none;">
+                    <span><i class="bi bi-person-fill" style=" color: #fff;" ></i></span><b>&nbsp; Perfil</b></a>
+                    <ul class="collapse list-unstyled" id="perfil">
+                    <li>
+                        <a routerLink="/perfil">Mi perfil</a>
+                    </li>
+                    <li>
+                        <a (click)="cerrarSesion()">Cerrar sesion</a>
+                    </li>
+                    </ul>
+            </li>
+            
+            <!-- Redes sociales -->
+            <li class="text-center" style="margin-top:120%;">
+            <b>Redes sociales</b><br>
+            <i class="bi bi-facebook"></i>&nbsp;
+            <i class="bi bi-twitter"></i>&nbsp;
+            <i class="bi bi-pinterest"></i>&nbsp;
+            <i class="bi bi-instagram"></i>&nbsp;
+            </li>
+    
+    
+        </ul>
+        </nav>
+
+    <!-- Contenido -->
+    <div id="content" class="background">
+        <br>
+        <div class="container">
+            <h2 class="text-center titulo" style="font-family: merienda;" ><b>{{Receta.nombre}}</b></h2><br>
+
+            <div class="row d-lg-block d-none">
+                    <div class="offset-lg-7 col">
+                        <h3 style="font-family: merienda;" class="ingredientes subtitulos"><b>Ingredientes</b></h3>
+                    </div>
+            </div>
+
+            <div class="row"> 
+                    <div class="col">
+                        <div class="card" style="width: 26rem;" >
+                            <img src="{{Receta.img}}" class="card-img-top" height="340px;" alt="...">
+                        </div>
+                    </div><br>
+
+                <div class="d-lg-none d-block">
+                        <div class="offset-lg-7 col">
+                            <h3 style="font-family: merienda;" class="ingredientes subtitulos"><b>Ingredientes</b></h3>
+                        </div>
+                </div>
+    
+                    <div class="col texto">
+                        {{Receta.ingredientes1}}
+                    </div>
+                    
+                    <div class="col texto">
+                        {{Receta.ingredientes2}}
+                    </div>
+            </div>
+
+            <br><br>
+
+            <div class="row">
+                    <div class="col">
+                        <h4 class="subtitulos" style="font-family: merienda;"><b>Método de preparación</b></h4>
+                        
+                        <p class="corbel">
+                        {{Receta.preparacion}}
+                        </p>  
+                    </div>
+            </div>
+        </div>
+
+    </div>
+</div>
