--- a/src/app/Component/inicio/inicio.component.html
+++ b/src/app/Component/inicio/inicio.component.html
@@ -49,7 +49,7 @@
 
             <div class="row">
                 <div class="col">
-                    <div class="card text-white" routerLink="/recetas/japonesas">
+                    <div class="card text-white" routerLink="/recetas/mexicanas">
                         <img src="../../../assets/Categorias/comida_mexicana.jpg" class="card-img" alt="..." style="max-height: 350px;">
                         <div class=" text-center card-img-overlay">
                             <h1>Comida Mexicana</h1>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card text-white" routerLink="/recetas/japonesas">
+                    <div class="card text-white" routerLink="/recetas/chinas">
                         <img src="../../../assets/Categorias/comida_china.jpg" class="card-img" alt="..." style="max-height: 350px;">
                         <div class=" text-center card-img-overlay">
                             <h1>Comida China</h1>
@@ -69,7 +69,7 @@
 
             <div class="row">
                 <div class="col">
-                    <div class="card text-white " routerLink="/recetas/japonesas">
+                    <div class="card text-white " routerLink="/recetas/italianas">
                         <img src="../../../assets/Categorias/comida_italiana.jpg" class="card-img" alt="..." style="max-height: 350px;">
                         <div class=" text-center card-img-overlay">
                             <h1>Comida Italiana</h1>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card text-white " routerLink="/recetas/japonesas">
+                    <div class="card text-white " routerLink="/recetas/españolas">
                         <img src="../../../assets/Categorias/comida_española.jpg" class="card-img" alt="..." style="max-height: 350px;">
                         <div class=" text-center card-img-overlay">
                             <h1>Comida Española</h1>
@@ -89,7 +89,7 @@
 
             <div class="row">
                 <div class="col">
-                    <div class="card text-white " routerLink="/recetas/japonesas">
+                    <div class="card text-white " routerLink="/recetas/colombianas">
                         <img src="../../../assets/Categorias/comida_colombiana.jpg" class="card-img" alt="..." style="max-height: 350px;">
                         <div class=" text-center card-img-overlay">
                             <h1>Comida Colombia</h1>
