--- a/src/app/Component/inter-receta-espanola/inter-receta-espanola.component.html
+++ b/src/app/Component/inter-receta-espanola/inter-receta-espanola.component.html
@@ -24,7 +24,7 @@
     
             <!-- Inicio -->
             <li>
-            <a class="text-white">
+            <a class="text-white" routerLink="/inicio">
                 <span><i class="bi bi-house-door-fill" style="color: #fff;"></i></span><b>&nbsp; Inicio</b></a>
             </li>
     
