--- a/src/app/Component/inter-receta-mexicana/inter-receta-mexicana.component.html
+++ b/src/app/Component/inter-receta-mexicana/inter-receta-mexicana.component.html
@@ -1,3 +1,4 @@
+
     <!-- Navbar -->
     <nav  class="navbar navbar-expand-lg color">
         <div class="container-fluid">
@@ -23,7 +24,7 @@
     
             <!-- Inicio -->
             <li>
-            <a class="text-white">
+            <a class="text-white" routerLink="/inicio">
                 <span><i class="bi bi-house-door-fill" style="color: #fff;"></i></span><b>&nbsp; Inicio</b></a>
             </li>
     
@@ -84,7 +85,7 @@
     <div id="content" class="background">
         <br>
         <div class="container">
-            <h2 class="text-center titulo" style="font-family: merienda;" ><b>Chiles Rellenos</b></h2><br>
+            <h2 class="text-center titulo" style="font-family: merienda;" ><b>{{Receta.nombre}}</b></h2><br>
 
             <div class="row d-lg-block d-none">
                     <div class="offset-lg-7 col">
@@ -95,7 +96,7 @@
             <div class="row"> 
                     <div class="col">
                         <div class="card" style="width: 26rem;" >
-                            <img src="../../../../assets/imagenes/Comida Mexicana/chiles2.jpg" class="card-img-top" height="340px;" alt="...">
+                            <img src="{{Receta.img}}" class="card-img-top" height="340px;" alt="...">
                         </div>
                     </div><br>
 
@@ -106,22 +107,11 @@
                 </div>
     
                     <div class="col texto">
-                        1 cucharada de KNORR® Caldo de costilla 
-                        3 cucharadas de aceite vegetal
-                        1/4 de cebolla finamente picada
-                        1 diente de ajo
-                        200 gramos de carne molida de res
-                        200 gramos de carne molida de cerdo
-                        1 cucharada de piñones blancos o rosados
+                        {{Receta.ingredientes1}}
                     </div>
                     
                     <div class="col texto">
-                        1/2 cucharadita de mezcla en partes iguales de pimienta negra, comino, canela, pimienta gorda y clavo en polvo
-                        300 gramos de nuez de Castilla
-                        1 cucharada de azúcar
-                        1 pizca de nuez moscada en polvo
-                        1/4 taza de crema reducida en grasa
-                        1 cucharada de perejil para decorar
+                        {{Receta.ingredientes2}}
                     </div>
             </div>
 
@@ -132,16 +122,7 @@
                         <h4 class="subtitulos" style="font-family: merienda;"><b>Método de preparación</b></h4>
                         
                         <p class="corbel">
-                        Para el relleno, calentar el aceite en una sartén grande, sofreír la cebolla y el ajo hasta que queden transparentes. 
-                        Agregar la carne y cocinar hasta que tome color.
-                        Agregar la manzana, pera, pasas, piñones y mezcla de condimentos.<br> Sazonar con el Knorr® Caldo de Costilla incorporando todos los ingredientes Cocinar 3 min.
-                        Mezclar Knorr® Tomate Deshidratado con el agua y combinarlo en la preparación anterior. Dejar que se integren todos los ingredientes y que se espese ligeramente.
-                        Aprox 3 minutos más.
-                        Para la Nogada, licuar la nuez, azúcar, nuez moscada y crema. <br>Si es necesario, agregar un poquito de leche descremada para obtener una consistencia más ligera.
-                        Rellenar los chiles repartiendo uniformemente la carne en las 6 piezas.<br>
-                        Servir el chile bañado parcialmente con la nogada, esparcir la granada encima y decorar con las hojas de perejil.
-                        Para conservar la nuez de castilla sin que se ponga obscura, remoja en leche hasta que la utilices.
-                        Para preparar la nogada en otra temporada que no hay nuez de Castilla, puedes usar almendras peladas y molidas que le darán un sabor delicioso.
+                        {{Receta.preparacion}}
                         </p>  
                     </div>
             </div>
