--- a/src/styles.css
+++ b/src/styles.css
@@ -2,22 +2,22 @@
 /* Tipografias */
 @font-face {
     font-family: corbel;
-    src: url("/src/assets/font-family/Corbel.ttf");
+    src: url("/assets/font-family/Corbel.ttf");
 }
 
 @font-face {
     font-family: corbel-bold;
-    src: url("/src/assets/font-family/CorbelBold.ttf");
+    src: url("/assets/font-family/CorbelBold.ttf");
 }
 
 @font-face {
     font-family: merienda;
-    src: url("/src/assets/font-family/Merienda-Regular.ttf");
+    src: url("/assets/font-family/Merienda-Regular.ttf");
 }
 
 @font-face {
     font-family: clarkson;
-    src: url("/src/assets/font-family/ClarksonScript-Regular.ttf");
+    src: url("/assets/font-family/ClarksonScript-Regular.ttf");
 }
 
 .text-white{
@@ -71,6 +71,9 @@ label{
 .link{
 	text-decoration: none;
 }
+body{
+    overflow-x: hidden;
+}
 
 
 .text-footer{
@@ -80,4 +83,131 @@ label{
     bottom: 0;
 }
 
+
+/* SideBar*/
+
+#sidebar.active {
+    margin-left: -250px;
+}
+.wrapper{
+	display: flex;
+	text-decoration: none;
+	transition: all 0.3s;
+}
+
+#sidebar{
+	min-width: 250px;
+	max-width: 250px;
+	background: #000;
+	color: #fff;
+	transition: all 0.3s;
+}
+
+#sidebar ul.components{
+	padding: 20px 0;
+	border-bottom: 1px solid #1c1c1c;
+}
+
+#sidebar ul p{
+	color: #000;
+	padding: 10px;
+}
+
+#sidebar ul li a{
+	padding: 10px;
+	font-size: 1.2em;
+	display: block;
+}
+
+#sidebar ul li a:hover{
+	color: #000;
+	background: #a8a8a8;
+}
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+	color: #000;
+	background: #F3F400;
+}
+
+a[data-toggle="collapse"]{
+	position: relative;
+}
+
+.dropdown-toggle::after{
+	display: block;
+	position: absolute;
+	top: 50%;
+	right: 20%;
+	transform: translateY(-50%);
+}
+ul ul a{
+	font-size: 0.9em !important;
+	padding-left: 30px !important;
+	background: #1c1c1c;
+}
+
+#content{
+	width: 100%;
+	padding: 20px;
+	min-height: 100vh;
+	transition: all 0.3s;
+    
+}
+
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+}
+
+
+
+@media screen and (max-width: 700px){
+    .grid{
+      display: grid;
+      grid-template-columns: auto auto;
+  }
+  .gride{
+    padding-right: 8px;
+  }
+  }
+  @media screen and (max-width: 1280px) and (min-width: 701px){
+    .grid{
+      display: grid;
+      grid-template-columns: auto auto ;
+  }
+  .gride{
+    padding-right: 80px;
+  } 
+  }
+    
+    
+    /* Por debajo de 400px */
+  @media screen and (max-width: 400px){
+    .grid{
+      display: grid;
+      grid-template-columns: auto;
+  }
+  
+  }
+  
+  
+  @media screen and (min-width: 1281px) {
+    .grid{
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+  }
+  .gride{
+    padding-right: 20px;
+  }
+  }
+  
+  
 
